# onvif_sdk

./: .gitignore  README.md
doc/: device_info_recv.xml  device_info_send.xml  onvif探测消息.xml  onvif探测相应消息.xml
doc/onvif_spec/: readme.txt
examples/avstream/: CMakeLists.txt  avstream.c
examples/capabilities/: CMakeLists.txt  capabilities.c
examples/changeResolution/: CMakeLists.txt  changeResolution.c
examples/deviceinfo/: CMakeLists.txt  deviceinfo.c
examples/discovery/: CMakeLists.txt  discovery.c
examples/snapshot/: CMakeLists.txt  snapshot.c
examples/timing/: CMakeLists.txt  timing.c
include/: onvif_comm.h  onvif_debug.h  onvif_discovery.h  onvif_service.h  print_log.h
include/openssl/: opensslconf.h
soap_framework/include/: soapStub.h
soap_framework/src/: soapC_1.c  soapC_10.c  soapC_11.c  soapC_12.c  soapC_13.c  soapC_14.c  soapC_15.c  soapC_16.c  soapC_17.c  soapC_18.c  soapC_19.c  soapC_2.c  soapC_20.c  soapC_21.c  soapC_22.c  soapC_23.c  soapC_24.c  soapC_3.c  soapC_4.c  soapC_5.c  soapC_6.c  soapC_7.c  soapC_8.c  soapC_9.c  soapClient.c  stdsoap2.c
src/: onvif_comm.c  onvif_discovery.c  onvif_service.c
utils/: onvif_debug.c  print_log.c
